// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoreOptionsToggle renders correctly when options box not open 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-79elbk"
  >
    <button
      aria-label="More options for shotnum"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1ooguyf-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="MoreVertIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`MoreOptionsToggle renders correctly when options box open and passes all props to the child component 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-79elbk"
  >
    <button
      aria-label="More options for shotnum"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1ooguyf-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="MoreVertIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      >
        <span
          class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
          style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
        >
          <span
            class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
          />
        </span>
      </span>
    </button>
    <div
      class="MuiBox-root css-1891n0w"
      role="dialog"
    >
      <mock-moreoptionsbox
        data-testid="mock-moreOptionsBox"
      >
        channel={
  "name": "shotnum",
  "options": {
    "visible": true,
    "colour": "colour-0",
    "lineStyle": "solid",
    "yAxis": "left"
  }
}
selectedPlotChannels=[
  {
    "name": "shotnum",
    "options": {
      "visible": true,
      "colour": "colour-0",
      "lineStyle": "solid",
      "yAxis": "left"
    }
  },
  {
    "name": "activeArea",
    "options": {
      "visible": true,
      "colour": "colour-1",
      "lineStyle": "solid",
      "yAxis": "left"
    }
  },
  {
    "name": "activeExperiment",
    "options": {
      "visible": true,
      "colour": "colour-2",
      "lineStyle": "solid",
      "yAxis": "left"
    }
  }
]
changeSelectedPlotChannels=undefined

      </mock-moreoptionsbox>
    </div>
  </div>
</DocumentFragment>
`;
